# modbus-lab

./: .gitignore  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/client/: index.html  package.json  tsconfig.json  vite.config.ts
apps/client/src/: App.svelte  test-setup.ts
apps/client/src-tauri/: Cargo.toml  tauri.conf.json
apps/client/src-tauri/.cargo/: config.toml
apps/client/src-tauri/capabilities/: default.json
apps/client/src-tauri/icons/: icon.icns
apps/client/src-tauri/src/: lib.rs  main.rs
apps/client/src-tauri/src/modbus/: events.rs  mod.rs  service.rs  types.rs
apps/client/src/state/: coils.svelte.ts  custom-frame.svelte.ts  discrete-inputs.svelte.ts  holding-registers.svelte.ts  initialization.svelte.ts  input-registers.svelte.ts  logs.svelte.ts  navigation.svelte.ts  notifications.svelte.ts  register-details.svelte.ts
apps/client/src/tests/: coils.test.ts  connection.test.ts  frame-timing.test.ts  navigation.test.ts  notifications.test.ts
apps/server/: index.html  package.json  tsconfig.json  vite.config.ts
apps/server/src/: App.svelte  main.ts  styles.css  test-setup.ts
apps/server/src-tauri/: Cargo.toml  tauri.conf.json
apps/server/src-tauri/.cargo/: config.toml
apps/server/src-tauri/capabilities/: default.json
apps/server/src-tauri/src/: lib.rs  main.rs
apps/server/src-tauri/src/modbus/: commands.rs  listener.rs  listener_app.rs  mod.rs  service.rs  types.rs
apps/server/src/lib/: frame-timing.ts  tooltip-overlay.ts
apps/server/src/state/: coils.svelte.ts  connection-health.svelte.ts  connection.svelte.ts  diagnostics.svelte.ts  discrete-inputs.svelte.ts  holding-registers.svelte.ts  input-registers.svelte.ts  logs.svelte.ts  navigation.svelte.ts
apps/server/src/tests/: coils.test.ts  connection.test.ts  logs.test.ts  navigation.test.ts  notifications.test.ts
src/: App.svelte  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/modbus/: commands.rs  service.rs  types.rs
src/components/layout/: AppNotifications.svelte  AppShell.svelte
src/components/layout/LogPanel/: LogEntryDetailModal.svelte  LogFilterTabs.svelte  LogList.svelte  LogPanel.svelte  LogRow.svelte  LogToolbar.svelte  RegisterDetailsPanel.svelte
src/components/pages/: CoilsPage.svelte  ConnectionPage.svelte  CustomFramePage.svelte  DiagnosticsPage.svelte  DiscreteInputsPage.svelte  HoldingRegistersPage.svelte  InputRegistersPage.svelte  PageShell.svelte  SettingsPage.svelte
src/components/shared/: EmptyState.svelte  IconButton.svelte  InputRegisterCard.svelte  InputRegisterTableRow.svelte  LoadingSpinner.svelte  PanelFrame.svelte  RegisterCard.svelte  RegisterTableRow.svelte  SwitchCard.svelte  TableRow.svelte  ToggleSwitch.svelte
src/state/: coils.svelte.ts  connection-health.svelte.ts  connection.svelte.ts  demo.svelte.ts  diagnostics.svelte.ts  discrete-inputs.svelte.ts  holding-registers.svelte.ts  initialization.svelte.ts  input-registers.svelte.ts  layout.svelte.ts  logs.svelte.ts  navigation.svelte.ts  settings.svelte.ts
(+54 files in other folders)
