[package]
name = "modbux"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
modbus-rs = { version = "0.4.0", features = ["async", "client", "coils", "discrete-inputs", "registers"] }
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
