[package]
name = "modbus-lab-server"
version = "0.1.0"
description = "ModbusLab Server desktop application"
authors = ["Raghav"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "app_server_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
